...
                });
              },
            ),
          ),
          CustomSelectionOption(
            textLeft: "Groups",
            textRight: "Private",
            onChanged: (value) {
              setState(() {
                idx = value;
              });
            },
          ),
...
                                  height:
                                      MediaQuery.of(context).size.height * 0.5,
                                  child: Image.asset(
                                      'assets/images/no_groups_chat_found.png'),
                                ),
                          const Text(
                            'No groups found',
                            style: TextStyle(
                                fontSize: 20,
                                fontWeight: FontWeight.bold,
                                color: CupertinoColors.systemGrey2),
                          ),
                        ],
...
                        String username = "";
                        if (snapshot.connectionState ==
                            ConnectionState.waiting) {
                          username = "";
                        }
                        if (snapshot.hasError) {
                          username = "Deleted Account";
                        }
                        if (snapshot.hasData) {
                          username =
                              UserData.fromSnapshot(snapshot.data!).username;
                        }
                        return GroupChatTile(
...
                fontWeight: FontWeight.bold,
              ),
            ),
            const SizedBox(height: 20),
            Text(
              idx == 0
                  ? "Create a group to start chatting"
                  : "Create a chat to start chatting",
              style: const TextStyle(
                  color: CupertinoColors.systemGrey, fontSize: 15),
            ),
          ],
        ),
      ),
...
                                            MediaQuery.of(context).size.height *
                                                0.5,
                                        child: Image.asset(
                                            'assets/images/no_chat_found.png'),
                                      ),
                                const Text(
                                  'No private chats found',
                                  style: TextStyle(
                                      fontSize: 20,
                                      fontWeight: FontWeight.bold,
                                      color: CupertinoColors.systemGrey2),
                                ),
                              ],
...
