...
  void _showBottomSheet(BuildContext context) {
    List<Widget> actions = [
      if (widget.message.type == Type.text)
        _buildOptionItem(
          icon: CupertinoIcons.doc_on_clipboard,
          color: CupertinoColors.systemBlue,
          text: 'Copy Text',
          onPressed: () => _copyText(),
        ),
      if (widget.message.type == Type.image)
        _buildOptionItem(
          icon: CupertinoIcons.download_circle,
          color: CupertinoColors.systemBlue,
...
          onPressed: () => _editMessage(),
        ),
      if (widget.message.sentByMe!)
        _buildOptionItem(
          icon: CupertinoIcons.delete,
          color: CupertinoColors.systemRed,
          text: 'Delete Message',
          onPressed: () => _deleteMessage(),
        ),
      if (widget.message.sentByMe!)
        _buildOptionItem(
          icon: CupertinoIcons.eye,
          color: CupertinoColors.systemBlue,
          text: 'Read By',
          onPressed: () => _showReaders(),
        ),
    ];

    showCupertinoModalPopup(
      context: context,
...
      },
    );
  }

  Future<void> _copyText() async {
    await Clipboard.setData(ClipboardData(text: widget.message.content));
    _showCustomSnackbar('Copied to clipboard');
  }

  Future<File> _saveImage() async {
    // Get the directory to save the file.
    final directory = await getApplicationDocumentsDirectory();
    final filePath = '${directory.path}/${const Uuid().v4()}.png';
...
