...
                      Navigator.of(context).pop();
                      getGroups();
                    });
                  });
                }
              },
              child: const Text("Create"),
            ),
          ],
        );
      },
    );
  }
...
        mainAxisAlignment: MainAxisAlignment.center,
        children: <Widget>[
          Icon(CupertinoIcons.group,
              size: 100, color: CupertinoColors.systemGrey),
          SizedBox(height: 20),
          Text(
            "No groups yet",
            style: TextStyle(
              color: CupertinoColors.systemGrey,
              fontSize: 20,
              fontWeight: FontWeight.bold,
            ),
          ),
...
